--- a/workit-landing-page/style.css
+++ b/workit-landing-page/style.css
@@ -61,6 +61,7 @@ h2 {
     color: var(--primary-col);
     background-color: var(--secondary-col);
     padding: 0.8rem 1.5rem;
+    border: 2px solid var(--secondary-col);
     transition: 0.2s all ease-in;
 }
 
@@ -115,6 +116,7 @@ header h1 span {
 .header-img {
     max-width: 100%;
     padding: 0 2.5rem;
+    
     transform: translateY(50%)
 }
 
@@ -197,4 +199,199 @@ footer .social-links {
 .social-links a {
     text-decoration: none;
     margin: 0 0.5rem;
+}
+
+@media only screen and (min-width: 768px) {
+    /* header styles */
+
+    .heading-L {
+        font-size: 3.75rem;
+        line-height: 3.75rem;
+        text-align: center;
+    }
+    
+    .heading-M {
+        font-size: 3rem;
+        line-height: 3.5rem;
+        text-align: left;
+    }
+    
+    .heading-S {
+        text-align: left;
+    }
+    
+    header .links {
+        padding: 2.25rem 2.5rem;
+    }
+
+    header .heading-L {
+        padding: 0 6.5rem;
+        margin-top: 3.5rem;
+        margin-bottom: 2.5rem;
+    }
+
+    header .header-img {
+        max-width: 60%;
+        margin: 0 auto;
+        display: block;
+    }
+
+    /* information section */
+
+    .info-section {
+        padding: 6.5rem;
+    }
+
+    .info-section .card {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 10fr;
+        padding: 1rem;
+    }
+
+    .card .number {
+        grid-row: 1/3;
+        grid-column: 1/2;
+        justify-self: center;
+        align-self: center;
+    }
+    
+    .card .heading-S {
+        grid-row: 1/2;
+        grid-column: 2/3;
+        align-self: end;
+        margin-left: 2rem;
+    }
+
+    .card .content {
+        grid-row: 2/3;
+        grid-column: 2/3;
+        margin-left: 2rem;
+        text-align: left;
+    }
+
+    /* founder section */
+
+    .founder-section {
+        margin: 2.5rem;
+        height: 550px;
+        
+    }
+
+    .founder-section .img-container {
+        width: 280px;
+        height: auto;
+    }
+    .founder-section .content-container {
+        width: 70%;
+        position: absolute;
+        top: unset;
+        bottom: 0;
+        right: 0;
+        text-align: left;
+    }
+
+    .spiral.bottom {
+        position: absolute;
+
+    }
+
+    footer {
+        padding-top: 2rem;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+
+    body {
+        font-size: 1.125rem;
+        line-height: 2rem;
+    }
+
+    .btn {
+        font-size: 1.125rem;
+        line-height: 2rem;
+        letter-spacing: -0.01125rem;
+    }
+
+    .heading-L {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
+
+    .heading-M {
+        font-size: 3.5rem;
+        line-height: 4rem;
+    }
+
+    .heading-S {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+
+    header {
+        padding-bottom: 15rem;
+    }
+
+    header .links {
+        padding: 3.5rem 10rem;
+    }
+
+    header .heading-L {
+        width: 50rem;
+        margin: 0 auto;
+        margin-bottom: 2.5rem;
+    }
+
+    header .btn.primary {
+        display: block;
+        margin: 0 auto;
+        
+    }
+
+    header .header-img {
+        all: unset;
+        width: 45rem;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .info-section {
+        padding-top: 15rem;
+        width: 80%;
+        max-width: 1150;
+        margin: 0 auto;
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 1.5rem;
+    }
+
+    .info-section .card {
+        all: unset;
+        text-align: center;
+    }
+
+    .info-section .card .heading-S {
+        text-align: center;
+    }
+
+    .info-section .card .content {
+        text-align: center;
+    }
+
+    .founder-section {
+        width: 80%;
+        max-width: 1150;
+        margin: 0 auto;
+        margin-bottom: 3rem;
+    }
+
+    .founder-section .img-container {
+        width: 450px;
+    }
+
+
 }
