--- a/body-mass-index-calculator/styles.css
+++ b/body-mass-index-calculator/styles.css
@@ -7,11 +7,16 @@
 body {
     font-family: 'Inter';
     color: #5E6E85;
+    --blue: #345ff6;
+    --gunmetal: #253347;
+    --dark-elec-blue: #5e6e85;
+    --borders: #d8e2e7;
+    --white: #fff;
     
 }
 
 h1, h2, h3 {
-    color: #253347;
+    color: var(--gunmetal);
 }
 
 /* HEADER STYLES */
@@ -84,7 +89,7 @@ input.hidden {
 .form-input-container .form-input {
     padding: 1.25rem 1.5rem;
     border-radius: 0.75rem;
-    border: 1px solid #D8E2E7;
+    border: 1px solid var(--borders);
     background: var(--Pure-White, #FFF);
     font-family: 'Inter';
     font-size: 1.5rem;
@@ -98,8 +103,8 @@ input.hidden {
 
 .form-input-container .form-input:focus {
     outline: none;
-    border: 1px solid var(--Blue, #345FF6);
-    background: var(--Pure-White, #FFF);
+    border: 1px solid var(--blue);
+    background: var(--white);
 }
 
 .form-input-container .units {
@@ -114,7 +119,7 @@ input.hidden {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    color: white;
+    color: var(--white);
     padding: 2rem;
     border-radius: 1rem;
     background: linear-gradient(90deg, #345FF6 0%, #587DFF 100%);
@@ -136,6 +141,127 @@ input.hidden {
     line-height: 110%; /* 3.3rem */
     letter-spacing: -0.15rem;
 }
+
+/* BMI RESULT STYLES */
+
+.bmi-result {
+    width: 100%;
+}
+
+.bmi-result-content {
+    padding: 0 1.5rem;
+    margin-top: 3rem;
+    margin-bottom: 4.4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.bmi-result-content h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 110%; /* 2.2rem */
+    letter-spacing: -0.1rem;
+}
+
+.bmi-result-content p {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+/* CARD SECTION */
+
+.card-section {
+    padding: 3.5rem 1.5rem;
+    background:  linear-gradient(290deg, rgba(214, 231, 255,0.25) 0%, rgba(214, 252, 254, 0.00) 100%);
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+}
+
+.card-section .card {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.card-section .card .icon-container {
+    width: 4rem;
+    height: 4rem;
+}
+
+.card-section .card .content-container h3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: -0.075rem;
+    margin-bottom: 1.5rem;
+}
+
+.card-section .card .content-container p {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+/* Limitations of BMI Section  */
+
+.limitations {
+    margin-top: 4.5rem;
+    margin-bottom: 6rem;
+    padding: 0 1.5rem;
+}
+
+.limitations .info {
+    margin-bottom: 3.5rem;
+}
+
+.limitations .info h2 {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 110%; /* 2.2rem */
+    letter-spacing: -0.1rem;
+    margin-bottom: 2rem;
+}
+
+.limitations .info p {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 150%; /* 1.5rem */
+}
+
+.limitations .card {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+    box-shadow: 16px 32px 56px 0px rgba(143, 174, 207, 0.25);
+    background-color: white;
+}
+
+.card .title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+    letter-spacing: -0.0625rem;
+}
+
+.limitations .card p {
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+
 
 @media only screen and (min-width: 768px) {
     /* Header styles */
@@ -166,6 +292,139 @@ input.hidden {
         align-items: center;
         border-radius: 5rem 62.4375rem 62.4375rem 5rem;
      }
+
+     /* BMI RESULT STYLES */
+
+     .bmi-result {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 2.7rem;
+        margin: 0 auto;
+        position: relative;
+        max-width: 1160px;
+     }
+
+     .bmi-result .img-container {
+        position: relative;
+        left: -4rem;
+     }
+
+     .bmi-result-content {
+        padding: 0;
+        margin-bottom: 2.13rem;
+        align-self: center;
+     }
+
+     /* CARD SECTION */
+     .card-section {
+        padding: 3.75rem 2.5rem;
+     }
+
+    .card-section .card {
+        flex-direction: row;
+        gap: 2.5rem;
+        align-items: center;
+     }
+
+     /* Limitations */
+
+     .limitations {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+     }
+
+     .limitations .info {
+        grid-column: span 2;
+     }
+     .limitations .card {
+        padding: 2rem;
+        max-width: 340px;
+        justify-self: center;
+    }
+
+    /* .limitations .card:nth-last-child(1) {
+        grid-column: span 2;
+        justify-self: center;
+    } */
+}
+
+@media only screen and (min-width: 1024px) {
+
+    .form-container {
+        margin: 0 auto;
+    }
+    .header-container {
+        margin: 0 auto;
+    }
+
+    /* CARD SECTION */
+    .card-section {
+        max-width: 1400px;
+        border-radius: 2.1875rem;
+        margin: 0 auto;
+        flex-direction: row;
+        justify-content: center;
+        gap: 2rem;
+    }
+
+    .card-section .card {
+        max-width: 365px;
+        flex-direction: column;
+        gap: 2.81rem;
+        align-items: start;
+    }
+
+    /* LIMITATIONS SECTION  */
+
+    .limitations {
+        max-width: 1160px;
+        margin: 7.5rem auto;
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: 4fr 3fr 4fr;
+    }
+
+    .limitations .info {
+        grid-column: 1 / 7;
+        grid-row: 1 / 2;
+        justify-self: start;
+    }
+
+    .limitations .info h2 {
+        text-align: left;
+        font-size: 3rem;
+        font-weight: 600;
+        line-height: 110%; /* 3.3rem */
+        letter-spacing: -0.15rem;
+    }
+    .limitations .info p {
+        text-align: left;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 150%; /* 1.5rem */
+    }
+
+    .limitations .card:nth-child(2) {
+        grid-column: 7 / 13;
+        grid-row: 1 / 2;
+    }
+
+    .limitations .card:nth-child(3) {
+        grid-column: 5 / 9;
+        grid-row: 2 / 3;
+    }
+    .limitations .card:nth-child(4) {
+        grid-column: 9 / 13;
+        grid-row: 2 / 3;
+    }
+    .limitations .card:nth-child(5) {
+        grid-column: 3 / 7;
+        grid-row: 3 / 4
+    }
+    .limitations .card:nth-child(6) {
+        grid-column: 7 / 13;
+        grid-row: 3 / 4;
+        justify-self: start;
+    }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -193,4 +452,19 @@ input.hidden {
         right: 0;
         bottom: 5.4rem;
     }
+
+    /* BMI RESULT STYLES */
+
+    .bmi-result {
+       grid-gap: 8rem;
+     }
+
+     .bmi-result .img-container {
+        left: 0;
+     }
+
+     .bmi-result-content {
+        padding: 0;
+        align-self: end;
+     }
 }
