--- a/body-mass-index-calculator/styles.css
+++ b/body-mass-index-calculator/styles.css
@@ -30,6 +30,20 @@ header {
 
 header h1 {
     margin: 1.5rem 0;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+    line-height: 110%; /* 3.3rem */
+    letter-spacing: -0.15rem;
+}
+
+header p {
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 
@@ -52,6 +66,12 @@ img {
     max-width: 1000px;
 }
 
+.form-container h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: -0.075rem;
+}
+
 /* RADIO BUTTONS */
 .radio-container {
     display: grid;
@@ -61,18 +81,86 @@ img {
 .radio-buttons-container {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .radio-buttons-container label {
+    color: var(--gunmetal);
     margin-left: 1.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 150%
 }
 
-input.hidden {
+.radio-buttons-container input.hidden {
+    position: absolute;
+    /* left: 31px; */
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+    height: 31px;
+    width: 31px;
+    border-radius: 50%;
+}
+
+.radio-fill {
     display: none;
+}
+
+.radio-input:checked + svg .radio-fill {
+    display: block;
 }
 
 
 /* INPUT ELEMENTS */
+
+/* IMPERIAL */
+.height-container .form-input-container{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-column-gap: 1rem;
+}
+
+.height-container .form-input-container label {
+    grid-column: 1/3;
+    grid-row: 1/2
+}
+.height-container .form-input-container .form-input {
+    width: 100%;
+}
+
+.height-input-container {
+    position: relative;
+}
+
+.weight-container .form-input-container {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-gap: 1rem;
+}
+
+.weight-container .form-input-container label {
+    grid-column: 1/3;
+    grid-row: 1/2
+}
+.weight-container .form-input-container .form-input {
+    width: 100%;
+}
+
+.weight-input-container {
+    position: relative;
+}
+/* END IMPERIAL */
+
+.form-feilds-container {
+    display: none;
+}
+
+.form-feilds-container.active {
+    display: block;
+}
 
 
 .form-input-container {
@@ -82,8 +170,13 @@ input.hidden {
     margin-bottom: 1rem;
 }
 
+
 .form-input-container label {
     margin-bottom: 0.5rem;
+    color: var(--dark-elec-blue);
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 150%;
 }
 
 .form-input-container .form-input {
@@ -101,6 +194,15 @@ input.hidden {
     /* flex: 1 */
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+
 .form-input-container .form-input:focus {
     outline: none;
     border: 1px solid var(--blue);
@@ -108,9 +210,13 @@ input.hidden {
 }
 
 .form-input-container .units {
+    color: var(--blue);
     position: absolute;
     right: 1.5rem;
     bottom: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    letter-spacing: -0.075rem;
 }
 
 /* Results box */
@@ -279,10 +385,19 @@ input.hidden {
         margin: 0 2rem;
         gap: 2rem;
     }
-    .form-feilds-container {
+
+    .form-feilds-container.active {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(0, 1fr)); /* Creates as many columns as can fit */
         gap: 10px; /* Adjust the gap as needed */
+     }
+
+     .form-feilds-container {
+        display: none;
+     }
+
+     .form-feilds-container.imperialContainer.active {
+        display: block;
      }
 
      .form-container .bmi-info {
@@ -381,6 +496,7 @@ input.hidden {
         margin: 7.5rem auto;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: 4fr 3fr 4fr;
+        grid-column-gap: 1rem;
     }
 
     .limitations .info {
@@ -396,6 +512,7 @@ input.hidden {
         line-height: 110%; /* 3.3rem */
         letter-spacing: -0.15rem;
     }
+    
     .limitations .info p {
         text-align: left;
         font-size: 1rem;
@@ -442,7 +559,12 @@ input.hidden {
     }
 
     header h1 {
+        text-align: left;
         margin-top: 8rem;
+        font-size: 4rem;
+        font-weight: 600;
+        line-height: 110%; /* 4.4rem */
+        letter-spacing: -0.2rem;
     }
 
     .form-container {
@@ -450,7 +572,7 @@ input.hidden {
         transform: unset;
         position: absolute;
         right: 0;
-        bottom: 5.4rem;
+        top: 5.4rem;
     }
 
     /* BMI RESULT STYLES */
